<resources>
    <string name="app_name">Dental Cliinic</string>
    <string name="pharmaceutical">pharmaceutical</string>
    <string name="laboratories">Laboratories</string>
    <string name="process">process</string>
    <string name="sub_process">sub process</string>
    <string name="control_interface">Control Interface</string>
    <string name="control_title">You can now manage data and view the financial reports of your Dental clinic easily</string>
    <string name="user_managment">User Management </string>
    <string name="report">Financial Report  </string>
    <string name="settings">Sittings</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="user_name">user name</string>
    <string name="membership_number">Membership number</string>
    <string name="phone_number">phone number</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="department">Department</string>
    <string name="work_start_date">Work start date</string>
    <string name="work_end_date">Work end date</string>
    <string name="salary_per_month">salary per month</string>
    <string name="working_time">working time</string>
    <string name="working_days">working days</string>
    <string name="save">save</string>
    <string name="id">id:</string>
    <string name="member_no">Membership number:</string>
    <string name="phone_no">phone number:</string>
    <string name="emailaddress">Email:</string>
    <string name="depatment">Department:</string>
    <string name="start_of_work">Start of work:</string>
    <string name="end_of_work">End of Work</string>
    <string name="salary">Salary per month :</string>
    <string name="work_time">Work time:</string>
    <string name="work_day">Work days:</string>
    <string name="gender">Gender:</string>
    <string name="work_hour">Work Hour</string>
    <string name="you_can_manage_all_the_medical_supplies_you_need">You can manage all the medical supplies you need</string>
    <string name="laboratory">Laboratories</string>
    <string name="address">Address</string>
    <string name="identifier">Identifier</string>
    <string name="update_doctor_data">Update doctor data</string>
    <string name="price">Price</string>
    <string name="sub_process_name">Sub process name</string>
    <string name="new_sub_process">New Sub Process</string>
    <string name="update_receptor_data">Update receptor data</string>
    <string-array name="working_time">
        <item>Morning 9:00-2:00 Am</item>
        <item>Morning 3:00-8:00 pm</item>
    </string-array>

    <string-array name="departments">
        <item>dept1</item>
        <item>dept2</item>
        <item>dept3</item>
        <item>dept4</item>
    </string-array>

    <string-array name="processes_section">
        <item>dental implant</item>
        <item>general dental</item>
        <item>orthodontics</item>

    </string-array>
</resources>