<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".ui.AdminAddUsers">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_a_new_account"
            android:textColor="#1E779F"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_reception_photo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:srcCompat="@drawable/blank_profile" />

        <EditText
            android:id="@+id/edt_reception_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_member_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/membership_number"
            android:inputType="number"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/identifier"
            android:inputType="number"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_work_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/work_start_date"
            android:inputType="date"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_work_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/work_end_date"
            android:inputType="date"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edt_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/salary_per_month"
            android:inputType="date"
            android:textSize="@dimen/_12ssp" />
        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:textSize="@dimen/_12ssp" />

        <Spinner
            android:id="@+id/sp_work_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:entries="@array/working_time"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="Gender:"
                android:textSize="@dimen/_18ssp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rd_mail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="male"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="female"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Working Days"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"/>
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="2"
    >
        <CheckBox
            android:id="@+id/ch_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="saturday"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/ch_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sunday"/>
        <CheckBox
            android:id="@+id/ch_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="monday"/>
        <CheckBox
            android:id="@+id/ch_Tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday"/>
        <CheckBox
            android:id="@+id/ch_Wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday"/>
        <CheckBox
            android:id="@+id/ch_Thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thursday"/>
</GridLayout>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>