<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.AdminControlActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_3sdp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/home_img"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_20sdp"
        android:text="@string/control_interface"
        android:textColor="#1E779F"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:elevation="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/control_title"
        android:textColor="#434141"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_user_management"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="#2271B1"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/user_managment"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_financial_reports"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="#2271B1"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/report"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="#2271B1"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/settings"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold" />

</LinearLayout>

</androidx.core.widget.NestedScrollView>
