<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddLaboratoriesActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:text="New Laboratory"/>

    <EditText
        android:id="@+id/edt_laboratory_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:inputType="phone"
        android:hint="Laboratory Name"/>

    <EditText
        android:id="@+id/edt_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:inputType="phone"
        android:hint="@string/phone_no"/>

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:inputType="text"
        android:hint="@string/address"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/btn_back_color"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"/>

</LinearLayout>