<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/update_receptor_data"
            android:textColor="#1E779F"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_arrow_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/arrow_back" />


        <LinearLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/img_receptor_photo"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/txt_receptor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:textSize="@dimen/_20ssp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>





        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/constraint_layout"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/address"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="#434141"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/phone_no"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="#434141"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>




        <TextView
            android:id="@+id/textView12"
            android:layout_below="@id/ll_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/work_day"
            android:textColor="#1E779F"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/gl_work_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:layout_below="@id/textView12"
            android:columnCount="3">
            <CheckBox
                android:id="@+id/ch_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="saturday" />

            <CheckBox
                android:id="@+id/ch_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sunday"/>
            <CheckBox
                android:id="@+id/ch_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="monday"/>
            <CheckBox
                android:id="@+id/ch_Tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tuesday"/>
            <CheckBox
                android:id="@+id/ch_Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wednesday"/>
            <CheckBox
                android:id="@+id/ch_Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thursday"/>

        </GridLayout>


        <LinearLayout
            android:id="@+id/ll_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gl_work_days"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/start_of_work"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_start_of_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="#434141"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_end_of_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_start_date"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/end_of_work"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_end_of_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="#434141"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/ll_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_end_of_work"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/salary"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="#434141"
                android:inputType="numberDecimal"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_work_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_salary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/work_hour"
                android:textColor="#1E779F"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rg_work_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_work_hour_morning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Morning 9:00-2:00 Am" />

                <RadioButton
                    android:id="@+id/rb_work_hour_evening"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Morning 3:00-8:00 pm"/>
            </RadioGroup>


        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ll_work_hour"
            android:backgroundTint="@color/btn_back_color"
            android:textAllCaps="false"
            android:text="Update"/>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>